web-infras/parser/tests/fixtures/babel/es2022/class-properties/arguments/output.txt
[SyntaxError]: 'arguments' is not allowed in class field initializer or static initialization block (3,11)
3|    foo = arguments;
 |         ^
[SyntaxError]: 'arguments'/'eval' can't be defined or assigned to in strict mode code (3,11)
3|    foo = arguments;
 |         ^
